src/components/SlideEntity/style.scoped.scss
.slide-entity {
    position: relative;

    pointer-events: all;
}

.slide-entity-title {
    color: var(--color-theme-primary);
    text-align: left;

    /**
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    **/

    @include respond-to('medium') {
        color: var(--color-theme-secondary);

        padding-bottom: rem(10px, 'medium');

        font-size: rem(24px, 'medium');
        font-weight: 300;
    }

    @include respond-to('large') {
        padding-bottom: rem(13px, 'large');

        font-size: rem(24px, 'large');
    }

    .first & {
        font-size: rem(35px, 'large');
        color: $color-white;
    }
}

.slide-entity-title.active {
    opacity: 0;

    position: absolute;
    left: 0;
    top: 0;

    color: $color-white;

    .ar & {
        right: 0;
    }
}

